--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
+    "@discordjs/voice": "^0.8.0",
+    "@distube/soundcloud": "^1.1.0",
     "@distube/spotify": "^1.1.0",
+    "@iamtraction/google-translate": "^1.1.2",
     "ascii-table": "^0.0.9",
     "axios": "^0.25.0",
     "common-tags": "^1.8.2",
+    "discord-gamecord": "^2.0.0",
     "discord-together": "^1.3.25",
     "discord.js": "^13.6.0",
     "distube": "^3.2.3",
@@ -22,6 +26,7 @@
     "os": "^0.1.2",
     "pretty-ms": "^7.0.1",
     "puppeteer": "^13.1.3",
+    "python": "^0.0.4",
     "slash-calculator": "^1.0.1",
     "sourcebin": "^4.3.5",
     "superagent": "^7.1.1",
